--- a/index.html
+++ b/index.html
@@ -3,104 +3,110 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <title>Portfolio </title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  
-
   <header class="site-header">
-    <nav class="nav container" aria-label="Primary">
-      <a class="logo" href="#"> Portfolio</a>
-      <ul id="navMenu" class="nav-links">
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
-      </ul>
-    </nav>
+  <nav class="nav">
+    <a class="logo" href="#">Portfolio</a>
+    <div class="nav-links">
+      <a href="#about" class="nav-link">About</a>
+      <a href="#projects" class="nav-link">Projects</a>
+      <a href="#contact" class="nav-link">Contact</a>
+    </div>
+  </nav>
   </header>
 
   <main id="main">
-    <section id="hero" class="hero container">
-      <div>
-        <p id="greeting" class="greeting" aria-live="polite"></p>
-        <h1 class="title">Hi, I’m <span class="accent">Norah Alharbi</span>.</h1>
-        <p class="tagline">I am computer scince student at KFUPM </p>
-        <div class="cta">
-          <a href="#projects" class="btn">See my ptoject</a>
-          <a href="#contact" class="btn btn-ghost">Contact me</a>
-        </div>
+    <section class="hero section">
+      <div class="hero-inner">
+        <h1>Hi <span style="color:rgb(222, 58, 25)">I am Norah ALharbi</span></h1>
+       
       </div>
-      <img src="assets/images/profile-placeholder.svg" class="hero-img" alt="Profile illustration" />
     </section>
 
-    <section id="about" class="section container">
+    <section id="about" class="section">
       <h2>About Me</h2>
       <p>
-        I'm a web developer in training who loves turning ideas into responsive, user-friendly websites.
-        Currently exploring HTML, CSS, and JavaScript fundamentals and learning with AI-assisted tools.
+       I'm computer scince student at KFUPM. I'm passionate about building web applications and 
+       exploring how technology can solve real-world problems. 
+       I enjoy working with modern web technologies and continuously 
+       learning new tools. Currently, I’m developing projects that strengthen my 
+       skills in software development, algorithms, and design.
       </p>
-      <p class="muted">Tagline: “Design simply. Build responsibly.”</p>
-    </section>
+      <h3>Tagline</h3>
+      <ul><li>Turning ideas into code.</li>
+    <li>Learning by building</li>
+</ul>
+</section>
 
-    <section id="projects" class="section container">
-      <h2>Projects</h2>
-      <div class="grid projects-grid">
-        <article class="card">
-          <img src="assets/images/project-1.svg" alt="Project one placeholder" />
-          <div class="card-body">
-            <h3>Project One</h3>
-            <p>A short description of this project. What problem it solves, and what you learned.</p>
-            <button class="btn small" data-toast="Coming soon!">Details</button>
-          </div>
-        </article>
-        <article class="card">
-          <img src="assets/images/project-2.svg" alt="Project two placeholder" />
-          <div class="card-body">
-            <h3>Project Two</h3>
-            <p>A short description of this project. Mention tools or concepts you used.</p>
-            <button class="btn small" data-toast="Coming soon!">Details</button>
-          </div>
-        </article>
+<section id="projects" class="section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
+
+    <div class="card">
+      <div class="card-media">
+        <img src="assets/images/CMOIVE.png" alt="CMOVIE logo">
+      </div>
+      <div class="card-body">
+        <h3>CMOVIE</h3>
+        <p>
+          A simple web app to search and book movies online.  
+          It focuses on an easy-to-use interface, allowing users to explore showtimes and reserve tickets quickly.  
+          Built to practice core web development concepts like responsive layouts, forms, and client-side interactions.
+        </p>
+      </div>
+      <div class="card-actions">
+        <button class="btn">Details</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-media">
+        <img src="assets/images/HASEEB.png" alt="HASEEB logo">
+      </div>
+      <div class="card-body">
+        <h3>HASEEB</h3>
+        <p>
+          A lightweight financial management toolkit designed for small suppliers in the coffee supply industry.  
+          It helps users track expenses, manage sales, and make data-driven decisions with minimal overhead.
+        </p>
+      </div>
+      <div class="card-actions">
+        <button class="btn">Details</button>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
       </div>
     </section>
 
-    <section id="contact" class="section container">
+    <section id="contact" class="section">
       <h2>Contact</h2>
-      <form id="contactForm" novalidate class="form">
-        <div class="form-row">
-          <label for="name">Name</label>
+      <form id="contactForm" novalidate class="grid-2">
+        <label>Name
           <input id="name" name="name" type="text" required placeholder="Your name" />
-          <small class="error" id="nameError" aria-live="polite"></small>
-        </div>
-        <div class="form-row">
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required placeholder="you@example.com" />
-          <small class="error" id="emailError" aria-live="polite"></small>
-        </div>
-        <div class="form-row">
-          <label for="message">Message</label>
+          
+        </label>
+        <label> Email<input id="email" name="email" type="email" required placeholder="you@example.com" /></label>
+        <label class="full">
+          Message
           <textarea id="message" name="message" rows="6" required placeholder="Say hello!"></textarea>
-          <small class="error" id="messageError" aria-live="polite"></small>
+        </label>
+        <div class="form-actions full">
+          <button type="submit" class="btn primary">Send</button>
         </div>
-        <button type="submit" class="btn">Send (demo)</button>
-        <p class="muted small">This is a demo form; no backend is connected.</p>
       </form>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-grid">
-      <p>&copy; <span id="year"></span> Your Name</p>
-      <ul class="social">
-        <li><a href="#" aria-label="GitHub">GitHub</a></li>
-        <li><a href="#" aria-label="LinkedIn">LinkedIn</a></li>
-        <li><a href="mailto:you@example.com" aria-label="Email">Email</a></li>
-      </ul>
-    </div>
+    <a href="#" class="to-top">↑ Back to top</a>
+    <p>© <span id="year"></span> Portfolio</p>
   </footer>
 
   <script src="js/script.js"></script>
